feat: now supporting every java version back to java 8